--- a/main.scss
+++ b/main.scss
@@ -3,18 +3,7 @@
   src: url("/fonts/verdana.ttf") format("truetype");
 }
 
-body {
-  overflow-x: hidden;
-  box-sizing: border-box;
-  font-family: "Verdana", "Roboto", sans-serif;
-  padding-bottom: 100px;
-
-  @media (max-width: 768px) {
-    padding-bottom: 50px;
-    font-size: 14px;
-    line-height: 17px;
-  }
-
+* {
   &::-webkit-scrollbar {
     width: 10px;
     border-radius: 10px;
@@ -28,7 +17,20 @@ body {
 
   &::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background-color: #c4c4c4;
+    background-color: #ccc;
+  }
+}
+
+body {
+  overflow-x: hidden;
+  box-sizing: border-box;
+  font-family: "Verdana", "Roboto", sans-serif;
+  padding-bottom: 100px;
+
+  @media (max-width: 768px) {
+    padding-bottom: 50px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
 
@@ -199,6 +201,9 @@ header {
     }
 
     &__tools {
+      background-color: transparent;
+      border: none;
+      outline: none;
       &-text {
         font-style: normal;
         font-weight: bold;
@@ -216,6 +221,65 @@ header {
           width: 40px;
           height: 40px;
         }
+      }
+    }
+
+    .sidebar {
+      height: 100%;
+      width: 815px;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      right: 0;
+      padding: 150px 130px;
+      overflow-x: hidden;
+      transition: 0.5s;
+      background: #c4c4c4;
+
+      transform: translate3d(100%, 0px, 0px);
+      -webkit-transform: translate3d(100%, 0px, 0px);
+      visibility: visible;
+
+      &.closed {
+        -webkit-transform: translate3d(0px, 0px, 0px);
+        transform: translate3d(0px, 0px, 0px);
+        visibility: visible;
+      }
+
+      .close-btn {
+        position: absolute;
+        top: 38px;
+        right: 46px;
+        width: 50px;
+        height: 50px;
+        background: #ffffff;
+        border: none;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      &__card-group {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px;
+        margin-bottom: 75px;
+      }
+
+      &__card-item {
+        width: 136px;
+        height: 136px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 22px 0;
+        margin-top: 20px;
+
+        background: #ffffff;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
       }
     }
   }
@@ -277,6 +341,38 @@ main {
       .card-block__body {
         border-radius: 10px 10px 0px 0px;
       }
+
+      .card-block__panel {
+        display: block;
+      }
+    }
+
+    &.in-progress {
+      .card-block__head {
+        display: block;
+      }
+      .card-block__body {
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+    }
+
+    &__head {
+      display: none;
+      height: 42px;
+      padding: 16px 46px;
+      background: #e3e3e3;
+      border-radius: 10px 10px 0px 0px;
+
+      .progress {
+        height: 10px;
+
+        &-bar {
+          background-color: #c4c4c4;
+          color: white;
+          border-radius: 6px;
+        }
+      }
     }
 
     &__body {
@@ -290,6 +386,7 @@ main {
       border-radius: 10px;
 
       @media (max-width: 768px) {
+        align-items: flex-start;
         padding: 25px 26px;
       }
 
@@ -300,6 +397,22 @@ main {
         line-height: 19px;
         color: #000000;
         margin-bottom: 0;
+
+        @media (max-width: 768px) {
+          margin-right: 17px;
+        }
+      }
+
+      .collapsible-menu {
+        &-icon {
+          border: none;
+          margin-top: 5px;
+          background-color: transparent;
+
+          &-img {
+            height: 25px;
+          }
+        }
       }
 
       &-icons {
@@ -332,11 +445,17 @@ main {
     }
 
     &__panel {
+      display: none;
       background: #ffffff;
       padding: 55px 69px;
+
+      @media (max-width: 768px) {
+        padding: 30px 25px;
+      }
     }
 
     .add,
+    .edit,
     .delete {
       padding: 10px 26px;
       border-radius: 20px;
@@ -346,11 +465,14 @@ main {
       line-height: 18px;
       text-align: center;
       color: #ffffff;
-      border: none;
-    }
-
-    .add {
       background: #000000;
+      border: none;
+
+      @media (max-width: 768px) {
+        font-size: 14px;
+        line-height: 18px;
+        padding: 5px 13px;
+      }
     }
 
     .delete {
