--- a/main.scss
+++ b/main.scss
@@ -27,6 +27,8 @@ body {
   font-family: "Verdana", "Roboto", sans-serif;
   padding-bottom: 100px;
 
+  color: #000000;
+
   @media (max-width: 768px) {
     padding-bottom: 50px;
     font-size: 14px;
@@ -455,6 +457,7 @@ main {
     }
 
     .add,
+    .save,
     .edit,
     .delete {
       padding: 10px 26px;
@@ -479,4 +482,38 @@ main {
       background: #c4c4c4;
     }
   }
+}
+
+.form-group > label {
+  top: 38px;
+  left: 15px;
+  position: relative;
+  background-color: white;
+  padding: 0px 5px 0px 5px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  transition: 300ms;
+  pointer-events: none;
+}
+
+.form-group > input,
+.form-group > textarea {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+
+  padding: 20px 20px;
+  border: 1px solid #c4c4c4;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+
+.form-group.label-animate > label {
+  top: 18px !important;
+  left: 30px !important;
+  font-size: 14px;
 }
