added completion tick to real card

--- a/main.scss
+++ b/main.scss
@@ -242,6 +242,15 @@ header {
       -webkit-transform: translate3d(100%, 0px, 0px);
       visibility: visible;
 
+      @media (max-width: 815px) {
+        width: 100%;
+        padding: 100px 40px;
+      }
+
+      @media (max-width: 325px) {
+        padding: 100px 90px;
+      }
+
       &.closed {
         -webkit-transform: translate3d(0px, 0px, 0px);
         transform: translate3d(0px, 0px, 0px);
@@ -260,6 +269,13 @@ header {
         display: flex;
         justify-content: center;
         align-items: center;
+
+        @media (max-width: 768px) {
+          top: 28px;
+          right: 36px;
+          width: 40px;
+          height: 40px;
+        }
       }
 
       &__card-group {
@@ -267,6 +283,18 @@ header {
         grid-template-columns: 1fr 1fr 1fr;
         gap: 20px;
         margin-bottom: 75px;
+
+        @media (max-width: 500px) {
+          grid-template-columns: 1fr 1fr;
+          gap: 10px;
+          margin-bottom: 45px;
+        }
+
+        @media (max-width: 325px) {
+          grid-template-columns: 1fr;
+          gap: 10px;
+          margin-bottom: 35px;
+        }
       }
 
       &__card-item {
@@ -282,6 +310,14 @@ header {
         background: #ffffff;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
         border-radius: 10px;
+
+        @media (max-width: 768px) {
+          width: 126px;
+          height: 126px;
+
+          font-size: 14px;
+          line-height: 18px;
+        }
       }
     }
   }
@@ -335,6 +371,7 @@ main {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     margin: 50px auto;
+    position: relative;
 
     @media (max-width: 768px) {
       margin: 48px auto;
@@ -356,6 +393,50 @@ main {
       .card-block__body {
         border-top-left-radius: 0;
         border-top-right-radius: 0;
+      }
+    }
+
+    .complete {
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      margin: -30px 0 0 -25px;
+      background: #000000;
+      width: 54px;
+      height: 54px;
+      border-radius: 50%;
+      display: none;
+      justify-content: center;
+
+      @media (max-width: 768px) {
+        width: 40px;
+        height: 40px;
+
+        margin: -20px 0 0 -15px;
+      }
+
+      .tick {
+        display: block;
+        width: 15px;
+        height: 30px;
+        margin-top: 8px;
+        border: solid #ffffff;
+        background-color: black;
+        border-width: 0 3px 3px 0;
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+
+        @media (max-width: 768px) {
+          width: 10px;
+          height: 20px;
+        }
+      }
+    }
+
+    &.real {
+      .complete {
+        display: flex;
       }
     }
 
@@ -430,10 +511,15 @@ main {
         background: #ffffff;
         border-radius: 50%;
         display: flex;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
         border: none;
         transition: all 300ms ease-in-out;
+
+        @media (max-width: 768px) {
+          width: 30px;
+          height: 30px;
+        }
 
         &:hover {
           background-color: #c4c4c4;
@@ -442,6 +528,11 @@ main {
         &-img {
           width: 20px;
           height: 20px;
+
+          @media (max-width: 768px) {
+            width: 15px;
+            height: 15px;
+          }
         }
       }
     }
