--- a/main.scss
+++ b/main.scss
@@ -517,23 +517,26 @@ main {
       }
 
       &-icon {
-        width: 40px;
-        height: 40px;
+        padding: 10px;
         background: #ffffff;
-        border-radius: 50%;
+        border-radius: 20px;
         display: flex;
         justify-content: space-around;
         align-items: center;
         border: none;
-        transition: all 300ms ease-in-out;
+        transition: 300ms ease-in-out;
 
-        @media (max-width: 768px) {
-          width: 30px;
-          height: 30px;
-        }
+        &.animate-btn {
+          padding: 10px 15px;
+          background-color: #000000;
 
-        &:hover {
-          background-color: #c4c4c4;
+          .card-block__body-icon-img {
+            display: none;
+          }
+
+          span {
+            display: flex;
+          }
         }
 
         &-img {
@@ -544,6 +547,17 @@ main {
             width: 15px;
             height: 15px;
           }
+        }
+
+        span {
+          font-style: normal;
+          font-weight: bold;
+          font-size: 15px;
+          line-height: 18px;
+          text-align: center;
+
+          color: #ffffff;
+          display: none;
         }
       }
     }
